[gd_scene load_steps=2 format=3]
[ext_resource type="Script" path="res://companion/GUI/CompanionMain.gd" id="1"]

[node name="CompanionMain" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="Root" type="VBoxContainer" parent="Margin"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 12

[node name="Title" type="Label" parent="Margin/Root"]
text = "Companion Mode"
horizontal_alignment = 1

[node name="TopRow" type="HBoxContainer" parent="Margin/Root"]
custom_constants/separation = 12

[node name="PortraitPanel" type="VBoxContainer" parent="Margin/Root/TopRow"]
size_flags_horizontal = 1
custom_constants/separation = 8

[node name="Portrait" type="TextureRect" parent="Margin/Root/TopRow/PortraitPanel"]
custom_minimum_size = Vector2(240, 240)
expand_mode = 1
stretch_mode = 6

[node name="PortraitHint" type="Label" parent="Margin/Root/TopRow/PortraitPanel"]
text = "No portrait set."
horizontal_alignment = 1

[node name="InfoPanel" type="VBoxContainer" parent="Margin/Root/TopRow"]
size_flags_horizontal = 3
custom_constants/separation = 6

[node name="NameRow" type="HBoxContainer" parent="Margin/Root/TopRow/InfoPanel"]
[node name="NameLabel" type="Label" parent="Margin/Root/TopRow/InfoPanel/NameRow"]
text = "Name:"
custom_minimum_size = Vector2(90, 0)
[node name="NameValue" type="Label" parent="Margin/Root/TopRow/InfoPanel/NameRow"]
text = "—"

[node name="AgeRow" type="HBoxContainer" parent="Margin/Root/TopRow/InfoPanel"]
[node name="AgeLabel" type="Label" parent="Margin/Root/TopRow/InfoPanel/AgeRow"]
text = "Age:"
custom_minimum_size = Vector2(90, 0)
[node name="AgeValue" type="Label" parent="Margin/Root/TopRow/InfoPanel/AgeRow"]
text = "—"

[node name="GenderRow" type="HBoxContainer" parent="Margin/Root/TopRow/InfoPanel"]
[node name="GenderLabel" type="Label" parent="Margin/Root/TopRow/InfoPanel/GenderRow"]
text = "Gender:"
custom_minimum_size = Vector2(90, 0)
[node name="GenderValue" type="Label" parent="Margin/Root/TopRow/InfoPanel/GenderRow"]
text = "—"

[node name="TemperRow" type="HBoxContainer" parent="Margin/Root/TopRow/InfoPanel"]
[node name="TemperLabel" type="Label" parent="Margin/Root/TopRow/InfoPanel/TemperRow"]
text = "Personality:"
custom_minimum_size = Vector2(90, 0)
[node name="TemperValue" type="Label" parent="Margin/Root/TopRow/InfoPanel/TemperRow"]
text = "—"

[node name="VisualRow" type="HBoxContainer" parent="Margin/Root/TopRow/InfoPanel"]
[node name="VisualLabel" type="Label" parent="Margin/Root/TopRow/InfoPanel/VisualRow"]
text = "Appearance:"
custom_minimum_size = Vector2(90, 0)
[node name="VisualValue" type="Label" parent="Margin/Root/TopRow/InfoPanel/VisualRow"]
text = "—"
autowrap_mode = 3

[node name="TraitsTitle" type="Label" parent="Margin/Root/TopRow/InfoPanel"]
text = "Traits"

[node name="TraitsValue" type="RichTextLabel" parent="Margin/Root/TopRow/InfoPanel"]
custom_minimum_size = Vector2(0, 100)
autowrap_mode = 3
scroll_active = true
text = "None"

[node name="ChatLog" type="RichTextLabel" parent="Margin/Root"]
custom_minimum_size = Vector2(0, 220)
autowrap_mode = 3
scroll_active = true
text = "[b]Chat started.[/b]\n"
size_flags_vertical = 3

[node name="InputRow" type="HBoxContainer" parent="Margin/Root"]
custom_constants/separation = 8

[node name="Input" type="LineEdit" parent="Margin/Root/InputRow"]
size_flags_horizontal = 3
placeholder_text = "Type a message…"

[node name="SendBtn" type="Button" parent="Margin/Root/InputRow"]
text = "Send"
size_flags_horizontal = 1

[node name="BackBtn" type="Button" parent="Margin/Root/InputRow"]
text = "Back"
size_flags_horizontal = 1
